c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/struct_decl_extra_semicolon.c
struct s {
    ;  // extra semicolon that doesn't follow declaration is a syntax error
    int a;
};